Add firstname and lastname attributes

--- a/WebContent/account_page.html
+++ b/WebContent/account_page.html
@@ -96,7 +96,9 @@
         <div id="u1322_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u1323" class="text" style="visibility: visible;">
-          <p><span>user name</span></p><p><span>xxxxxxx@hotmail.com</span></p><p><span>Change Password</span></p>
+          <p><span>user name</span></p>
+          <p><span>123 ABC Street, NSW 2000</span></p>
+          <p><span>xxxxxxx@hotmail.com</span></p>
         </div>
       </div>
 
@@ -222,7 +224,7 @@
         <div id="u1350_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u1351" class="text" style="visibility: visible;">
-          <p><span>Current Password</span></p><p><span><br></span></p>
+          <p><span>New Password</span></p><p><span><br></span></p>
         </div>
       </div>
 
