Add register page

--- a/WebContent/main_page.html
+++ b/WebContent/main_page.html
@@ -235,6 +235,15 @@
 	        </div>
 	      </div>
       
+    	  <!-- Register -->
+	      <div id="u182" class="ax_default primary_button">
+	        <div id="u182_div" class=""></div>
+	        <!-- Unnamed () -->
+	        <div id="u183" class="text" style="visibility: visible;">
+	          <p><span style="text-decoration:underline;"><a href="register.html">Register</a></span></p>
+	        </div>
+	      </div>
+	      
       </div>
 
       <!-- Unnamed (Rectangle) -->
@@ -870,14 +879,7 @@
       <!-- Unnamed (Rectangle) [reference page] -->
       <div id="u180_ref" class="reference_page"></div>
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u182" class="ax_default primary_button">
-        <div id="u182_div" class=""></div>
-        <!-- Unnamed () -->
-        <div id="u183" class="text" style="visibility: visible;">
-          <p><span style="text-decoration:underline;">Register</span></p>
-        </div>
-      </div>
+
 
 
 	  
