--- a/WebContent/register.html
+++ b/WebContent/register.html
@@ -312,7 +312,14 @@
 	      </form>
 	    </div>
 	    
-	  
+      <!-- Unnamed (Rectangle) -->
+      <div id="regSubmit" class="ax_default primary_button">
+        <div id="regSubmit_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="regSubmittext" class="text" style="visibility: visible;">
+          <p><span>Submit</span></p>
+        </div>
+      </div>
 
       <!-- Unnamed (Rectangle) -->
       <div id="u1118" class="ax_default box_3">
