--- a/WebContent/register.html
+++ b/WebContent/register.html
@@ -269,7 +269,7 @@
 		        </div>
 		      </div>
 		      
-		   <form id="rfform">
+		   <form id="registerInput" action="register" method="post">
    		      <div id="rf1text" class="ax_default box_2">
 		        <div class="text" style="visibility: visible;">
 		          <input id="rftext" type="text" value="" name="username"></input>
@@ -296,9 +296,9 @@
 		      
 		      <div id="rf5text" class="ax_default box_2">
 		        <div style="visibility: visible;">
-		          <input id="rfradio1" type="radio" value="male" name="gender"></input>
+		          <input id="rfradio1" type="radio" value="M" name="gender"></input>
 		          <div id="rfradiodesc1" class="text" style="visibility: visible;">Male</div>
-		          <input id="rfradio2" type="radio" value="female" name="gender"></input>
+		          <input id="rfradio2" type="radio" value="F" name="gender"></input>
 		          <div id="rfradiodesc2" class="text" style="visibility: visible;">Female</div>
 		        </div>
 		      </div>
