Stored fetched info into cookie

--- a/WebContent/account_page.html
+++ b/WebContent/account_page.html
@@ -49,6 +49,7 @@
     
     <link href="data/styles.css" type="text/css" rel="stylesheet"/>
     <script src="data/cookieHandler.js"></script>
+    <script src="data/fetchinfo.js"></script>
     <script src="data/login.js"></script>
     
   </head>
