Fixing syntax errors

--- a/WebContent/data/loginHTML.html
+++ b/WebContent/data/loginHTML.html
@@ -1,4 +1,10 @@
-<div id="loginSect"><
+<link href="data/styles.css" type="text/css" rel="stylesheet"/>
+<link href="data/loginSect.css" type="text/css" rel="stylesheet"/>
+<script src="data/cookieHandler.js"></script>
+<script src="data/login.js"></script>
+    
+    
+<div id="loginSect">
 
   <!-- Username Text -->
   <div id="u44" class="ax_default box_2">
