--- a/WebContent/main_page.html
+++ b/WebContent/main_page.html
@@ -48,6 +48,7 @@
     </script>
 
     <link href="data/styles.css" type="text/css" rel="stylesheet"/>
+    <link href="data/loginSect.css" type="text/css" rel="stylesheet"/>
     <script src="data/cookieHandler.js"></script>
     <script src="data/login.js"></script>
 
@@ -194,7 +195,7 @@
       </div>
 
 
-	  <div id="loginSect"><
+	  <div id="loginSect">
 	  
 	      <!-- Username Text -->
 	      <div id="u44" class="ax_default box_2">
