--- a/WebContent/register.html
+++ b/WebContent/register.html
@@ -49,6 +49,7 @@
     </script>
     
     <link href="data/styles.css" type="text/css" rel="stylesheet"/>
+    <link href="data/loginSect.css" type="text/css" rel="stylesheet"/>
     <script src="data/cookieHandler.js"></script>
     <script src="data/login.js"></script>
     <script src="data/register.js"></script>
@@ -585,7 +586,7 @@
         </div>
       </div>
 
-      <div id="loginSect"><
+      <div id="loginSect">
 	  
 	      <!-- Username Text -->
 	      <div id="u44" class="ax_default box_2">
