--- a/WebContent/game_info_page.html
+++ b/WebContent/game_info_page.html
@@ -51,7 +51,7 @@
     <link href="data/styles.css" type="text/css" rel="stylesheet"/>
 	<link href="data/loginSect.css" type="text/css" rel="stylesheet"/>
 	<script src="data/cookieHandler.js"></script>
-	<script src="data/fetchGameName.js"></script>
+	<script src="data/fetchGame.js"></script>
 	<script src="data/login.js"></script>
     
   </head>
