Add capability to find game image based on game name

--- a/WebContent/game_info_page.html
+++ b/WebContent/game_info_page.html
@@ -52,6 +52,7 @@
 	<link href="data/loginSect.css" type="text/css" rel="stylesheet"/>
 	<script src="data/cookieHandler.js"></script>
 	<script src="data/fetchGame.js"></script>
+	<script src="data/saveGame.js"></script>
 	<script src="data/login.js"></script>
     
   </head>
@@ -135,7 +136,7 @@
         <div id="u3448_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u3449" class="text" style="visibility: visible;">
-          <p><span>You're reviewing: Umbrella Corps PC</span></p><p><span>How do you rate this product?</span></p>
+          <p><span>You're reviewing: [Game Name]</span></p><p><span>How do you rate this product?</span></p>
         </div>
       </div>
 
@@ -252,7 +253,7 @@
         <div id="u3474_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u3475" class="text" style="visibility: visible;">
-          <p><span>STORMBLOOD PC</span></p><p><span><br></span></p>
+          <p><span>[Game Name]</span></p><p><span><br></span></p>
         </div>
       </div>
 
@@ -856,7 +857,7 @@
 
       <!-- Unnamed (Image) -->
       <div id="u3596" class="ax_default image">
-        <img id="u3596_img" class="img " src="images/main_page/u28.jpg"/>
+        <img id="u3596_img" class="img" src="images/main_page/u28.jpg"/>
         <!-- Unnamed () -->
         <div id="u3597" class="text" style="display: none; visibility: hidden">
           <p><span></span></p>
