Add proper link to Storm Blood

--- a/WebContent/main_page.html
+++ b/WebContent/main_page.html
@@ -266,13 +266,13 @@
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u52" class="ax_default primary_button">
+      <div id="u52" class="ax_default primary_button"><a href="game_info_page.html?gID=1">
         <div id="u52_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u53" class="text" style="visibility: visible;">
           <p><span>Details</span></p>
         </div>
-      </div>
+      </a></div>
 
       <!-- Unnamed (Rectangle) -->
       <div id="u54" class="ax_default primary_button">
