Link game detail links to proper links.

--- a/WebContent/main_page.html
+++ b/WebContent/main_page.html
@@ -275,49 +275,49 @@
       </a></div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u54" class="ax_default primary_button">
+      <div id="u54" class="ax_default primary_button"><a href="game_info_page.html?gID=6">
         <div id="u54_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u55" class="text" style="visibility: visible;">
           <p><span>Details</span></p>
         </div>
-      </div>
+      </a></div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u56" class="ax_default primary_button">
+      <div id="u56" class="ax_default primary_button"><a href="game_info_page.html?gID=4">
         <div id="u56_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u57" class="text" style="visibility: visible;">
           <p><span>Details</span></p>
         </div>
-      </div>
+      </a></div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u58" class="ax_default primary_button">
+      <div id="u58" class="ax_default primary_button"><a href="game_info_page.html?gID=3">
         <div id="u58_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u59" class="text" style="visibility: visible;">
           <p><span>Details</span></p>
         </div>
-      </div>
+       </a></div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u60" class="ax_default primary_button">
+      <div id="u60" class="ax_default primary_button"><a href="game_info_page.html?gID=2">
         <div id="u60_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u61" class="text" style="visibility: visible;">
           <p><span>Details</span></p>
         </div>
-      </div>
+      </a></div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u62" class="ax_default primary_button">
+      <div id="u62" class="ax_default primary_button"><a href="game_info_page.html?gID=5">
         <div id="u62_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u63" class="text" style="visibility: visible;">
           <p><span>Details</span></p>
         </div>
-      </div>
+      </a></div>
 
       <!-- Unnamed (Rectangle) -->
       <div id="u64" class="ax_default primary_button">
@@ -392,58 +392,58 @@
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u80" class="ax_default primary_button">
+      <div id="u80" class="ax_default primary_button"><a href="game_info_page.html?gID=7">
         <div id="u80_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u81" class="text" style="visibility: visible;">
           <p><span>Details</span></p>
         </div>
-      </div>
+      </a></div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u82" class="ax_default primary_button">
+      <div id="u82" class="ax_default primary_button"><a href="game_info_page.html?gID=11">
         <div id="u82_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u83" class="text" style="visibility: visible;">
           <p><span>Details</span></p>
         </div>
-      </div>
+      </a></div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u84" class="ax_default primary_button">
+      <div id="u84" class="ax_default primary_button"><a href="game_info_page.html?gID=10">
         <div id="u84_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u85" class="text" style="visibility: visible;">
           <p><span>Details</span></p>
         </div>
-      </div>
+      </a></div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u86" class="ax_default primary_button">
+      <div id="u86" class="ax_default primary_button"><a href="game_info_page.html?gID=8">
         <div id="u86_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u87" class="text" style="visibility: visible;">
           <p><span>Details</span></p>
         </div>
-      </div>
+      </a></div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u88" class="ax_default primary_button">
+      <div id="u88" class="ax_default primary_button"><a href="game_info_page.html?gID=9">
         <div id="u88_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u89" class="text" style="visibility: visible;">
           <p><span>Details</span></p>
         </div>
-      </div>
+      </a></div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u90" class="ax_default primary_button">
+      <div id="u90" class="ax_default primary_button"><a href="game_info_page.html?gID=12">
         <div id="u90_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u91" class="text" style="visibility: visible;">
           <p><span>Details</span></p>
         </div>
-      </div>
+      </a></div>
 
       <!-- Unnamed (Rectangle) -->
       <div id="u92" class="ax_default box_3">
