Cull all the game_info_page and fix up the main page

--- a/WebContent/main_page.html
+++ b/WebContent/main_page.html
@@ -450,7 +450,7 @@
         <div id="u92_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u93" class="text" style="visibility: visible;">
-          <p><span>StormBlood</span></p>
+          <p><span>STORM BLOOD</span></p>
         </div>
       </div>
 
@@ -459,7 +459,7 @@
         <div id="u94_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u95" class="text" style="visibility: visible;">
-          <p><span>DAWNWAR2</span></p>
+          <p><span>DAWN of WAR 2</span></p>
         </div>
       </div>
 
@@ -477,7 +477,7 @@
         <div id="u98_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u99" class="text" style="visibility: visible;">
-          <p><span>NIGHYMARES</span></p>
+          <p><span>NIGHTMARES</span></p>
         </div>
       </div>
 
@@ -504,7 +504,7 @@
         <div id="u104_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u105" class="text" style="visibility: visible;">
-          <p><span>TEKKEN7</span></p>
+          <p><span>TEKKEN 7</span></p>
         </div>
       </div>
 
@@ -513,7 +513,7 @@
         <div id="u106_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u107" class="text" style="visibility: visible;">
-          <p><span>TEKKEN7</span></p>
+          <p><span>TEKKEN 7 DELUXE</span></p>
         </div>
       </div>
 
@@ -522,7 +522,7 @@
         <div id="u108_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u109" class="text" style="visibility: visible;">
-          <p><span>DIRT4</span></p>
+          <p><span>DIRT 4</span></p>
         </div>
       </div>
 
@@ -531,7 +531,7 @@
         <div id="u110_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u111" class="text" style="visibility: visible;">
-          <p><span>MotoGp17</span></p>
+          <p><span>MOTO GP 17</span></p>
         </div>
       </div>
 
@@ -549,7 +549,7 @@
         <div id="u114_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u115" class="text" style="visibility: visible;">
-          <p><span>RISINGSTORM</span></p>
+          <p><span>RISING STORM</span></p>
         </div>
       </div>
 
