detail and image can be click to show the game info

--- a/WebContent/main_page.html
+++ b/WebContent/main_page.html
@@ -140,58 +140,58 @@
         </div>
       </div>
 
-      <!-- Unnamed (Image) -->
-      <div id="u28" class="ax_default image">
+      <!-- STORMBLOOD (Image) -->
+      <div id="u28" class="ax_default image"><a href="game_info_page.html?gID=1">
         <img id="u28_img" class="img " src="images/main_page/u28.jpg"/>
         <!-- Unnamed () -->
         <div id="u29" class="text" style="display: none; visibility: hidden">
           <p><span></span></p>
-        </div>
+       </a></div>
       </div>
 
-      <!-- Unnamed (Image) -->
-      <div id="u30" class="ax_default image">
+      <!-- MOTOGP17 (Image) -->
+      <div id="u30" class="ax_default image"><a href="game_info_page.html?gID=2">
         <img id="u30_img" class="img " src="images/main_page/u30.jpg"/>
         <!-- Unnamed () -->
         <div id="u31" class="text" style="display: none; visibility: hidden">
           <p><span></span></p>
-        </div>
+      </a></div>
       </div>
 
-      <!-- Unnamed (Image) -->
-      <div id="u32" class="ax_default image">
+      <!-- DIRT4 (Image) -->
+      <div id="u32" class="ax_default image"><a href="game_info_page.html?gID=3">
         <img id="u32_img" class="img " src="images/main_page/u32.jpg"/>
         <!-- Unnamed () -->
         <div id="u33" class="text" style="display: none; visibility: hidden">
           <p><span></span></p>
-        </div>
+       </a></div>
       </div>
 
-      <!-- Unnamed (Image) -->
-      <div id="u34" class="ax_default image">
+      <!-- MORROWIND (Image) -->
+      <div id="u34" class="ax_default image"><a href="game_info_page.html?gID=4">
         <img id="u34_img" class="img " src="images/main_page/u34.jpg"/>
         <!-- Unnamed () -->
         <div id="u35" class="text" style="display: none; visibility: hidden">
           <p><span></span></p>
-        </div>
+      </a></div>
       </div>
 
-      <!-- Unnamed (Image) -->
-      <div id="u36" class="ax_default image">
+      <!-- TEKKEN 7 (Image) -->
+      <div id="u36" class="ax_default image"><a href="game_info_page.html?gID=5">
         <img id="u36_img" class="img " src="images/main_page/u36.png"/>
         <!-- Unnamed () -->
         <div id="u37" class="text" style="display: none; visibility: hidden">
           <p><span></span></p>
-        </div>
+      </a></div>
       </div>
 
-      <!-- Unnamed (Image) -->
-      <div id="u38" class="ax_default image">
+      <!-- TEKKEN 7 DELUXE (Image) -->
+      <div id="u38" class="ax_default image"><a href="game_info_page.html?gID=6">
         <img id="u38_img" class="img " src="images/main_page/u38.jpg"/>
         <!-- Unnamed () -->
         <div id="u39" class="text" style="display: none; visibility: hidden">
           <p><span></span></p>
-        </div>
+      </a></div>
       </div>
 
 
@@ -265,7 +265,7 @@
         </div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!--Storm Blood (Rectangle) -->
       <div id="u52" class="ax_default primary_button"><a href="game_info_page.html?gID=1">
         <div id="u52_div" class=""></div>
         <!-- Unnamed () -->
@@ -274,7 +274,7 @@
         </div>
       </a></div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!--Tekken7 deluxe  (Rectangle) -->
       <div id="u54" class="ax_default primary_button"><a href="game_info_page.html?gID=6">
         <div id="u54_div" class=""></div>
         <!-- Unnamed () -->
@@ -283,7 +283,7 @@
         </div>
       </a></div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Morrowind (Rectangle) -->
       <div id="u56" class="ax_default primary_button"><a href="game_info_page.html?gID=4">
         <div id="u56_div" class=""></div>
         <!-- Unnamed () -->
@@ -292,7 +292,7 @@
         </div>
       </a></div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Dirt4 (Rectangle) -->
       <div id="u58" class="ax_default primary_button"><a href="game_info_page.html?gID=3">
         <div id="u58_div" class=""></div>
         <!-- Unnamed () -->
@@ -301,7 +301,7 @@
         </div>
        </a></div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Moto Gp 17 (Rectangle) -->
       <div id="u60" class="ax_default primary_button"><a href="game_info_page.html?gID=2">
         <div id="u60_div" class=""></div>
         <!-- Unnamed () -->
@@ -310,7 +310,7 @@
         </div>
       </a></div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Tekken7 (Rectangle) -->
       <div id="u62" class="ax_default primary_button"><a href="game_info_page.html?gID=5">
         <div id="u62_div" class=""></div>
         <!-- Unnamed () -->
@@ -337,61 +337,61 @@
         </div>
       </div>
 
-      <!-- Unnamed (Image) -->
-      <div id="u68" class="ax_default image">
+      <!-- Batman (Image) -->
+      <div id="u68" class="ax_default image"><a href="game_info_page.html?gID=7">
         <img id="u68_img" class="img " src="images/main_page/u68.png"/>
         <!-- Unnamed () -->
         <div id="u69" class="text" style="display: none; visibility: hidden">
           <p><span></span></p>
-        </div>
+       </a></div>
       </div>
 
-      <!-- Unnamed (Image) -->
-      <div id="u70" class="ax_default image">
+      <!-- Nightmare (Image) -->
+      <div id="u70" class="ax_default image"><a href="game_info_page.html?gID=8">
         <img id="u70_img" class="img " src="images/main_page/u70.jpg"/>
         <!-- Unnamed () -->
         <div id="u71" class="text" style="display: none; visibility: hidden">
           <p><span></span></p>
-        </div>
+      </a></div>
       </div>
 
-      <!-- Unnamed (Image) -->
-      <div id="u72" class="ax_default image">
+      <!-- Battlegrounds (Image) -->
+      <div id="u72" class="ax_default image"><a href="game_info_page.html?gID=9">
         <img id="u72_img" class="img " src="images/main_page/u72.jpg"/>
         <!-- Unnamed () -->
         <div id="u73" class="text" style="display: none; visibility: hidden">
           <p><span></span></p>
-        </div>
+     </a></div>
       </div>
 
-      <!-- Unnamed (Image) -->
-      <div id="u74" class="ax_default image">
+      <!-- Prey (Image) -->
+      <div id="u74" class="ax_default image"><a href="game_info_page.html?gID=10">
         <img id="u74_img" class="img " src="images/main_page/u74.png"/>
         <!-- Unnamed () -->
         <div id="u75" class="text" style="display: none; visibility: hidden">
           <p><span></span></p>
-        </div>
+       </a></div>
       </div>
 
-      <!-- Unnamed (Image) -->
-      <div id="u76" class="ax_default image">
+      <!-- Rising strom (Image) -->
+      <div id="u76" class="ax_default image"><a href="game_info_page.html?gID=12">
         <img id="u76_img" class="img " src="images/main_page/u76.jpg"/>
         <!-- Unnamed () -->
         <div id="u77" class="text" style="display: none; visibility: hidden">
           <p><span></span></p>
-        </div>
+      </a></div>
       </div>
 
-      <!-- Unnamed (Image) -->
-      <div id="u78" class="ax_default image">
+      <!-- Dawn of war2 (Image) -->
+      <div id="u78" class="ax_default image"><a href="game_info_page.html?gID=11">
         <img id="u78_img" class="img " src="images/main_page/u78.png"/>
         <!-- Unnamed () -->
         <div id="u79" class="text" style="display: none; visibility: hidden">
           <p><span></span></p>
-        </div>
+      </a></div>
       </div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Batman (Rectangle) -->
       <div id="u80" class="ax_default primary_button"><a href="game_info_page.html?gID=7">
         <div id="u80_div" class=""></div>
         <!-- Unnamed () -->
@@ -400,7 +400,7 @@
         </div>
       </a></div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Dawn of War2 (Rectangle) -->
       <div id="u82" class="ax_default primary_button"><a href="game_info_page.html?gID=11">
         <div id="u82_div" class=""></div>
         <!-- Unnamed () -->
@@ -409,7 +409,7 @@
         </div>
       </a></div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Prey (Rectangle) -->
       <div id="u84" class="ax_default primary_button"><a href="game_info_page.html?gID=10">
         <div id="u84_div" class=""></div>
         <!-- Unnamed () -->
@@ -418,7 +418,7 @@
         </div>
       </a></div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Nightmares (Rectangle) -->
       <div id="u86" class="ax_default primary_button"><a href="game_info_page.html?gID=8">
         <div id="u86_div" class=""></div>
         <!-- Unnamed () -->
@@ -427,7 +427,7 @@
         </div>
       </a></div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- BattleGrounds (Rectangle) -->
       <div id="u88" class="ax_default primary_button"><a href="game_info_page.html?gID=9">
         <div id="u88_div" class=""></div>
         <!-- Unnamed () -->
@@ -436,7 +436,7 @@
         </div>
       </a></div>
 
-      <!-- Unnamed (Rectangle) -->
+      <!-- Risingstorm2 (Rectangle) -->
       <div id="u90" class="ax_default primary_button"><a href="game_info_page.html?gID=12">
         <div id="u90_div" class=""></div>
         <!-- Unnamed () -->
