Put game images into a single div

--- a/WebContent/account_page.html
+++ b/WebContent/account_page.html
@@ -347,6 +347,7 @@
         </div>
       </div>
 
+<div id="gameList">
       <!-- Unnamed (Image) -->
       <div id="u1378" class="ax_default image">
         <img id="u1378_img" class="img " src="images/account_page/u1378.jpg"/>
@@ -382,6 +383,7 @@
           <p><span></span></p>
         </div>
       </div>
+</div>
 
       <!-- Unnamed (Image) -->
       <div id="u1386" class="ax_default image">
