Add log out button

--- a/WebContent/account_page.html
+++ b/WebContent/account_page.html
@@ -328,6 +328,15 @@
           <p><span>Change or cancel</span></p>
         </div>
       </div>
+      
+      <!-- Unnamed (Rectangle) -->
+      <div id="logOut" class="ax_default primary_button">
+        <div id="logOutBgr" class=""></div>
+        <!-- Unnamed () -->
+        <div id="logOutText" class="text" style="visibility: visible;">
+          <p><span>Log Out</span></p>
+        </div>
+      </div>
 
       <!-- Unnamed (Rectangle) -->
       <div id="u1374" class="ax_default heading_2">
