--- a/WebContent/account_page.html
+++ b/WebContent/account_page.html
@@ -52,6 +52,8 @@
     <script src="data/cookieHandler.js"></script>
     <script src="data/fetchinfo.js"></script>
     <script src="data/login.js"></script>
+     <script src="data/logout.js"></script>
+    
     
   </head>
   <body>
