Migrate all common functions to cookieHandler(rename to commonFunctions)

--- a/WebContent/account_page.html
+++ b/WebContent/account_page.html
@@ -48,8 +48,8 @@
     </script>
     
     <link href="data/styles.css" type="text/css" rel="stylesheet"/>
+    <script src="data/commonFunctions.js"></script>
     <link href="data/loginSect.css" type="text/css" rel="stylesheet"/>
-    <script src="data/cookieHandler.js"></script>
     <script src="data/fetchinfo.js"></script>
     <script src="data/login.js"></script>
     <script src="data/logout.js"></script>
