--- a/WebContent/data/loginHTML.html
+++ b/WebContent/data/loginHTML.html
@@ -1,6 +1,6 @@
 <link href="data/styles.css" type="text/css" rel="stylesheet"/>
 <link href="data/loginSect.css" type="text/css" rel="stylesheet"/>
-<script src="data/cookieHandler.js"></script>
+<script src="data/commonFunctions.js"></script>
 <script src="data/login.js"></script>
     
     
