--- a/WebContent/main_page.html
+++ b/WebContent/main_page.html
@@ -49,7 +49,7 @@
 
     <link href="data/styles.css" type="text/css" rel="stylesheet"/>
     <link href="data/loginSect.css" type="text/css" rel="stylesheet"/>
-    <script src="data/cookieHandler.js"></script>
+	<script src="data/commonFunctions.js"></script>
     <script src="data/login.js"></script>
 
   </head>
