Squash a lot of bugs.

--- a/WebContent/account_page.html
+++ b/WebContent/account_page.html
@@ -101,9 +101,9 @@
         <div id="u1322_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u1323" class="text" style="visibility: visible;">
-          <p><span>user name</span></p>
-          <p><span>123 ABC Street, NSW 2000</span></p>
-          <p><span>xxxxxxx@hotmail.com</span></p>
+          <p><span></span></p>
+          <p><span></span></p>
+          <p><span></span></p>
         </div>
       </div>
 
@@ -359,15 +359,15 @@
         </div>
       </div>
 
-<div id="gameList">
-
-      
-
-</div>
+	<div id="gameList">
+	
+	      
+	
+	</div>
 
       <!-- Unnamed (Image) -->
       <div id="u1386" class="ax_default image">
-        <img id="u1386_img" class="img " src="images/account_page/u1386.png"/>
+        <img id="u1386_img" class="img " src=""/>
         <!-- Unnamed () -->
         <div id="u1387" class="text" style="display: none; visibility: hidden">
           <p><span></span></p>
@@ -379,7 +379,7 @@
         <div id="u1388_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u1389" class="text" style="visibility: visible;">
-          <p><span>xxxxx-xxxxx-xxxxx-2315</span></p>
+          <p><span></span></p>
         </div>
       </div>
 
