Remove [game name] debug placeholder

--- a/WebContent/game_info_page.html
+++ b/WebContent/game_info_page.html
@@ -136,7 +136,7 @@
         <div id="u3448_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u3449" class="text" style="visibility: visible;">
-          <p><span>You're reviewing: [Game Name]</span></p><p><span>How do you rate this product?</span></p>
+          <p><span>You're reviewing: </span></p><p><span>How do you rate this product?</span></p>
         </div>
       </div>
 
@@ -253,7 +253,7 @@
         <div id="u3474_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u3475" class="text" style="visibility: visible;">
-          <p><span>[Game Name]</span></p><p><span><br></span></p>
+          <p><span></span></p><p><span><br></span></p>
         </div>
       </div>
 
