--- a/WebContent/data/loginHTML.html
+++ b/WebContent/data/loginHTML.html
@@ -1,9 +1,10 @@
+<!--First half. Add this to head-->
 <link href="data/styles.css" type="text/css" rel="stylesheet"/>
 <link href="data/loginSect.css" type="text/css" rel="stylesheet"/>
 <script src="data/commonFunctions.js"></script>
 <script src="data/login.js"></script>
     
-    
+<!--Second half. Replace the placeholder login section.--> 
 <div id="loginSect">
 
   <!-- Username Text -->
