--- a/WebContent/account_page.html
+++ b/WebContent/account_page.html
@@ -54,7 +54,8 @@
     <script src="data/login.js"></script>
     <script src="data/logout.js"></script>
     <script src="data/removeGame.js"></script>
-     
+    <script src="data/updatePayment.js"></script>
+    
    
   </head>
   <body>
